// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayMultiSelect should render a ClayMultiSelect and clear the input values after the onblur event 1`] = `
<div class="form-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown" style="top: 0px; left: 0px;">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect and keep the focus of the input when selecting an item 1`] = `
<div class="form-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input name="selectedItems" type="hidden" value="foo">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="0">
            <span class="label-item label-item-expand">Foo</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input name="selectedItems" type="hidden" value="bar">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="1">
            <span class="label-item label-item-expand">Bar</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with classes 1`] = `
<div class="form-group my-custom-class">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with id 1`] = `
<div class="form-group" id="myId">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with input name from selected items 1`] = `
<div class="form-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with label 1`] = `
<div class="form-group">
  <label>Foo</label>
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with placeholder 1`] = `
<div class="form-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" placeholder="Placeholder" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with select button hidden 1`] = `
<div class="form-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with selected items 1`] = `
<div class="form-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input name="selectedItems" type="hidden" value="foo">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="0">
            <span class="label-item label-item-expand">Foo</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input name="selectedItems" type="hidden" value="bar">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="1">
            <span class="label-item label-item-expand">Bar</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;

exports[`ClayMultiSelect should render the default markup 1`] = `
<div class="form-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <div></div>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
<ul class="autocomplete-dropdown-menu dropdown-menu" ref="dropdown">
  <li class="dropdown-item">no-results-found</li>
</ul>
`;
